	- eliminate db-1.85 and db-2.x configuration.
	- fix: popt arg sanity checks broken, optarg != optArg.
	- fix: popt range checks on floats/doubles broken.
	- popt: return POPT_ERROR_ERRNO on config open/read/close failure.
	- fix: popt exec doesn't add '--', --target et al no longer need '='.
	- fix: popt consume-next-arg "!#:+" w/o side effect (#41956).

4.0 -> 4.0.[12]
	- add doxygen and lclint annotations most everywhere.
	- rip out rpm{get,put}text, use getpo.sh and specspo instead.
	- consistent return for all signature verification.
	- use enums for almost all rpmlib #define's.
	- API: change rpmProblem typedef to pass by reference, not value.
	- unify rpmError and rpmMessge interfaces through rpmlog.
	- collect and display rpm build error messages at end of build.
	- don't trim leading ./ in rpmCleanPath() (#14961).
	- order packages using tsort, clipping PreReq:'s in dependency loops.
	- fix: avoid calling getpass twice as side effect of xstrdup macro
		(katzj@linuxpower.org) (#17672).
	- handle possible db3 dependency on -lpthread more gracefully.
	- fix: more (possible) xstrdup side effects.
	- detect (still need to test) rdonly linux file systems.
	- check available inodes as well as blocks on mounted file systems.
	- pass rpmTransactionSet, not elements, to installBinaryPackage et al.
	- verify MD5 sums of payload files when unpacking archive.
	- fix: runTriggers was not adding countCorrection.
	- add cscope/ctags (Rodrigo Barbosa<rodrigob@conectiva.com.br>).
	- remove getMacroBody() from rpmio API.
	- hide libio lossage in prototype, not API.
	- add brp-strip-shared script <rodrigob@conectiva.com.br>.
	- better item/task progress bars <rodrigob@conectiva.com.br>.
	- add support for SHA1 as well as MD5 message digests.
	- add rpmGetRpmlibProvides() to retrieve rpmlib(...) provides
		(Pawel A. Gajda<mis@k2.net.pl>).
	- add support for unzip <rodrigob@conectiva.com.br>
	- load headers as single contiguous region.