@@ -70,6 +70,7 @@
 	- popt: return POPT_ERROR_ERRNO on config open/read/close failure.
 	- fix: popt exec doesn't add '--', --target et al no longer need '='.
 	- fix: popt consume-next-arg "!#:+" w/o side effect (#41956).
+	- fix: for busted db1, attempt chain reconnection to following record.
 
 4.0 -> 4.0.[12]
 	- add doxygen and lclint annotations most everywhere.
